# passwedge

./: .gitignore  CHANGELOG.md  README.md  action.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: DEFINITIONS.md  RELEASING.md  architecture.d2
scripts/: placeholder_scan.py
src/passwedge/: __init__.py  cli.py  data.py  pytest_plugin.py
src/passwedge/adapters/: __init__.py  generic.py  tetrad_lens.py
src/passwedge/metrics/: __init__.py  bayes.py  capability.py  reliability.py
src/passwedge/report/: __init__.py  markdown.py  summary.py
src/passwedge/stats/: __init__.py  compare.py  credible.py
tests/: test_adapters.py  test_bayes.py  test_capability.py  test_cli.py  test_data.py  test_montecarlo.py  test_pytest_plugin.py  test_reliability.py  test_report.py  test_scorio_repro.py  test_stats.py
